# global_pose_initializer

./: CMakeLists.txt  README.md  package.xml
config/: global_pose_initializer_params.yaml
include/global_pose_initializer/: global_pose_initializer.hpp
launch/: global_initializer.launch.py
src/: global_pose_initializer.cpp
